Add facebook-domain-verification meta

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta name="data-address" content="2488 AMHERST AVE,
 LOS ANGELES, CA 90064"><meta name="data-map" content="2488+AMHERST+AVE,+LOS+ANGELES,+CA+90064">
   <meta name="description" content="Our nonprofit strengthens the community with programs focused on community services, education, and direct relief.">
+<meta name="facebook-domain-verification" content="kvpurmsobqiscsvxrezgxpzqo1858z" />
 </head>
 <body>
 <div style="position:absolute;left:-9999px;top:-9999px;opacity:0" data-uniq="{{UNIQUE_BLOB}}">
